# Marzipan

./: .gitignore  CPPLINT.cfg  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  cli.cpp  clippy.toml  config.h  core.h  cpplint.py  emulator-vars.h  emulator.cpp  emulator.h  format.sh  main.cpp  makefile  redcode.c  redcode.h  rustfmt.toml  types.h  visualizer.cpp  warrior.cpp  warrior.h
marzipan-cli/: Cargo.toml
marzipan-core/: Cargo.toml
marzipan-core/src/: emulator_core.rs  emulators.rs  lib.rs
marzipan-core/src/emulators/: generic_emulator.rs
marzipan-core/src/emulators/generic_emulator/: bytecode.rs  dispatch.rs  emulation_operations.rs  operands.rs  processes.rs  pspace.rs
optimized-emulator/: core.h  emulator-run.cpp  emulator.cpp  emulator.h  makefile  redcode.h
redcode/: Cargo.toml
redcode-parser/: Cargo.toml  loadfile_grammar.md
redcode-parser/src/: lib.rs  line_parser.rs  loadfile_parser.rs  loadfile_primitives.rs
redcode-parser/src/parser_grammar_specification/: loadfile_grammar.md
redcode/src/: lib.rs  redcode.rs  relaxed_redcode.rs
src/: lib.rs
src/core/: micro_ops.rs  mod.rs  primatives.rs
src/emulators/: makefile
src/emulators/big-switch-emulator/: bs_core.h  bs_emulator-run.cpp  bs_emulator.cpp  makefile  redcode.h
src/emulators/dyno-emulator/: emulator.cpp  makefile
src/interfaces/: bs_emulator.h  config.h  emulator.h
src/parser/: atomics.rs  loadfile.rs  mod.rs
src/redcode/: mod.rs  redaddr.rs
src/servers/: cli-server.cpp  makefile
tests/: integration_tests.rs  redcode-test.cpp  redcode-test.h  unit-test.cpp
verification-tests/: Cargo.toml
warriors/: dwarf.red
