[package]
name = "marzipan-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "Emulator implementations for CoreWar redcode programs"

[dependencies]
redcode = { path = "../redcode"}
num-traits = "0.2"
num-derive = "0.3"
itertools = "0.10"

[dev-dependencies]
rand = "0.8"
coverage-helper = "0.1"
