[package]
name = "redcode-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "Parsers for the redcode assembly language used in CoreWar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
redcode = { path = "../redcode"}

[dev-dependencies]
coverage-helper = "0.1"
