[package]
name = "redcode"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "Types for the Redcode assembly language used by the CoreWar programming game"

[dependencies]
