[package]
name = "redcode"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "Types for the Redcode assembly language used by the CoreWar programming game"

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
serde = {version = "1.0", features=["derive"]}
itertools = "0.10"

[dev-dependencies]
coverage-helper = "0.1"
