[package]
name = "verification-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "Verify marzipan emulators match the behavior of pMARS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
